# oas2tosca

./: .gitignore  README.md  onboard_profiles.sh  profile.py  pyproject.toml  read.py  requirements.txt  s2t.py  setup.cfg  swagger.py  swagger2.py  swagger3.py
csars/: io.k8s.api.core.csar  io.k8s.apimachinery.pkg.api.resource.csar  io.k8s.apimachinery.pkg.apis.meta.csar  io.k8s.apimachinery.pkg.runtime.csar  io.k8s.apimachinery.pkg.util.intstr.csar
oas2tosca/: __main__.py  profile.py  read_oas.py  swagger.py  swagger2.py  swagger3.py
scripts/: build.sh
src/: __main__.py  profile.py
tests/: onboard_profiles.sh
