[aliases]
release = bdist_wheel
test = pytest

[metadata]
name = oas2tosca
summary = Convert OpenAPI Specifications to TOSCA Profiles
description_file = README.md
description_content_type = text/markdown
author = Chris Lauwers
author_email = lauwers@ubicity.com
home_page = https://github.com/lauwers/oas2tosca
license = Apache License Version 2.0
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options.entry_points]
console_scripts =
    oas2tosca = oas2tosca.oas2tosca:main

[options]
packages = oas2tosca
install_requires =
    ruamel.yaml
